--- a/app/src/main/res/layout/fragment_following.xml
+++ b/app/src/main/res/layout/fragment_following.xml
@@ -25,5 +25,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="16dp"
+        tools:listitem="@layout/item_follower" />
 </androidx.constraintlayout.widget.ConstraintLayout>
